force-app/main/default/objects/Account/fields/Area_PL__c.field-meta.xml
<CustomField>
    <fullName>Area_PL__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>North-West</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>South-West</fullName>
            </value>
            <value>
                <fullName>South-East</fullName>
            </value>
            <value>
                <fullName>Warsaw</fullName>
            </value>
            <value>
                <fullName>NORTE</fullName>
            </value>
            <value>
                <fullName>BAJIO</fullName>
            </value>
            <value>
                <fullName>PACIFICO</fullName>
            </value>
            <value>
                <fullName>CENTRO</fullName>
            </value>
            <value>
                <fullName>CENTRO - SUR</fullName>
            </value>
            <value>
                <fullName>V DE M</fullName>
            </value>
            <value>
                <fullName>SURESTE</fullName>
            </value>
            <value>
                <fullName>PENINSULA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>