force-app/main/default/objects/Account/fields/Area_Suburb_TD__c.field-meta.xml
<CustomField>
    <fullName>Area_Suburb_TD__c</fullName>
    <description>Area/Suburb</description>
    <label>Area/Suburb</label>
    <length>80</length>
    <type>Text</type>
</CustomField>