force-app/main/default/objects/Account/fields/Associated_Business__c.field-meta.xml
<CustomField>
    <fullName>Associated_Business__c</fullName>
    <description>Mainly for GTR</description>
    <inlineHelpText>e.g. Hudson News</inlineHelpText>
    <label>Associated Business</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>