force-app/main/default/objects/Account/fields/Assortment_whse__c.field-meta.xml
<CustomField>
    <fullName>Assortment_whse__c</fullName>
    <description>Assortment</description>
    <label>Assortment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>hoch [Vollsortimenter - Breite &amp; Tiefe]</fullName>
            </value>
            <value>
                <fullName>mittel [Breite und/oder Tiefe - ausbaufähig</fullName>
            </value>
            <value>
                <fullName>gering [Grundsortiment - nicht ausbaufähig]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>