force-app/main/default/objects/Account/fields/Australia_Goods_Service_Tax__c.field-meta.xml
<CustomField>
    <fullName>Australia_Goods_Service_Tax__c</fullName>
    <label>Australia Goods/Service Tax</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 - Not Relevant</fullName>
            </value>
            <value>
                <fullName>1 - Taxable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>