force-app/main/default/objects/Account/fields/Auto_Lift__c.field-meta.xml
<CustomField>
    <fullName>Auto_Lift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Infowelders</description>
    <label>Auto Lift?</label>
    <type>Checkbox</type>
</CustomField>