force-app/main/default/objects/Account/fields/AV_Competitive__c.field-meta.xml
<CustomField>
    <fullName>AV_Competitive__c</fullName>
    <inlineHelpText>+ Packs</inlineHelpText>
    <label>AV Competitive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>