force-app/main/default/objects/Account/fields/Available_for_B2B__c.field-meta.xml
<CustomField>
    <fullName>Available_for_B2B__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Identifies if an account is to be targeted by E-Commerce</description>
    <label>Available for B2B</label>
    <type>Checkbox</type>
</CustomField>