force-app/main/default/objects/Account/fields/Average_3m_Volume__c.field-meta.xml
<CustomField>
    <fullName>Average_3m_Volume__c</fullName>
    <description>FDC-PLFC</description>
    <label>Average 3m Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>