force-app/main/default/objects/Account/fields/Average_age_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Average_age_of_Directors__c</fullName>
    <description>FDC-PLFC</description>
    <label>Average age of Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>