force-app/main/default/objects/Account/fields/Average_Beer_Volume_ltrs_PL__c.field-meta.xml
<CustomField>
    <fullName>Average_Beer_Volume_ltrs_PL__c</fullName>
    <inlineHelpText>Ltrs</inlineHelpText>
    <label>Average Beer Volume (ltrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>