force-app/main/default/objects/Account/fields/Average_Spending__c.field-meta.xml
<CustomField>
    <fullName>Average_Spending__c</fullName>
    <description>INFOWELDERS</description>
    <label>Average Spending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>