force-app/main/default/objects/Account/fields/B_F_Annual_Volume_MX_PL__c.field-meta.xml
<CustomField>
    <fullName>B_F_Annual_Volume_MX_PL__c</fullName>
    <label>B-F Annual Volume: MX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>