force-app/main/default/objects/Account/fields/B_F_Chain_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>B_F_Chain_Account_Manager__c</fullName>
    <label>B-F Chain Account Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>