force-app/main/default/objects/Account/fields/B_F_Market_Manager__c.field-meta.xml
<CustomField>
    <fullName>B_F_Market_Manager__c</fullName>
    <label>B-F Market Manager</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>667D</fullName>
            </value>
            <value>
                <fullName>668D</fullName>
            </value>
            <value>
                <fullName>671D US SHIP CHANDLERS</fullName>
            </value>
            <value>
                <fullName>674D DF Shoppes</fullName>
            </value>
            <value>
                <fullName>675D – No. Border</fullName>
            </value>
            <value>
                <fullName>675D – So. Border</fullName>
            </value>
            <value>
                <fullName>Aaron Martin</fullName>
            </value>
            <value>
                <fullName>Adilson Prado</fullName>
            </value>
            <value>
                <fullName>Adilson Prado – Brazil Office</fullName>
            </value>
            <value>
                <fullName>Ales Logar</fullName>
            </value>
            <value>
                <fullName>Asia/Pacific Territory 23: Taro Sakamoto</fullName>
            </value>
            <value>
                <fullName>Asia/Pacific Territory 27: Taro Sakamoto</fullName>
            </value>
            <value>
                <fullName>Australia Office</fullName>
            </value>
            <value>
                <fullName>Barbara Pinna</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Biba Koniecna</fullName>
            </value>
            <value>
                <fullName>Bruce Losee</fullName>
            </value>
            <value>
                <fullName>Budiman – Singapore</fullName>
            </value>
            <value>
                <fullName>Charlotte Ashburner</fullName>
            </value>
            <value>
                <fullName>Chidchanok Samolkiat</fullName>
            </value>
            <value>
                <fullName>China – Alex Cheung</fullName>
            </value>
            <value>
                <fullName>Chuck Shive – Australia Office</fullName>
            </value>
            <value>
                <fullName>Croatia Slovenia Albania</fullName>
            </value>
            <value>
                <fullName>Dimitar Georgiev – Country Manager</fullName>
            </value>
            <value>
                <fullName>Dirk Sass, Country Manager</fullName>
            </value>
            <value>
                <fullName>Dong II Shin – Korea</fullName>
            </value>
            <value>
                <fullName>Dubai – Tony McIver</fullName>
            </value>
            <value>
                <fullName>Duty Free Italy</fullName>
            </value>
            <value>
                <fullName>Estonia</fullName>
            </value>
            <value>
                <fullName>European Territory 04: Yiannis Pafilis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>