force-app/main/default/objects/Account/fields/B_F_Role__c.field-meta.xml
<CustomField>
    <fullName>B_F_Role__c</fullName>
    <label>B-F Role</label>
    <type>TextArea</type>
</CustomField>