force-app/main/default/objects/Account/fields/BA_Region__c.field-meta.xml
<CustomField>
    <fullName>BA_Region__c</fullName>
    <description>Infowelders</description>
    <label>BA Region</label>
    <length>30</length>
    <type>Text</type>
</CustomField>