force-app/main/default/objects/Account/fields/Banner__c.field-meta.xml
<CustomField>
    <fullName>Banner__c</fullName>
    <label>Banner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Group_FRN__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>8 A HUIT</fullName>
            </value>
            <value>
                <fullName>AUCHAN</fullName>
            </value>
            <value>
                <fullName>AUCHAN CITY</fullName>
            </value>
            <value>
                <fullName>AUCHAN DRIVE</fullName>
            </value>
            <value>
                <fullName>AUCHAN - SCHIEVER</fullName>
            </value>
            <value>
                <fullName>AUCHAN SUPERMARCHE</fullName>
            </value>
            <value>
                <fullName>C10 - CAVISTES</fullName>
            </value>
            <value>
                <fullName>CARREFOUR CITY</fullName>
            </value>
            <value>
                <fullName>CARREFOUR CONTACT</fullName>
            </value>
            <value>
                <fullName>CARREFOUR DRIVE</fullName>
            </value>
            <value>
                <fullName>CARREFOUR EXPRESS</fullName>
            </value>
            <value>
                <fullName>CARREFOUR HYPERMARCHES</fullName>
            </value>
            <value>
                <fullName>CARREFOUR MARKET</fullName>
            </value>
            <value>
                <fullName>CARREFOUR MONTAGNE</fullName>
            </value>
            <value>
                <fullName>CASINO</fullName>
            </value>
            <value>
                <fullName>CASINO DRIVE</fullName>
            </value>
            <value>
                <fullName>CASINO SUPERMARCHE</fullName>
            </value>
            <value>
                <fullName>CENTRE LECLERC</fullName>
            </value>
            <value>
                <fullName>CHAMPION</fullName>
            </value>
            <value>
                <fullName>CHRONODRIVE</fullName>
            </value>
            <value>
                <fullName>COCCIMARKET</fullName>
            </value>
            <value>
                <fullName>COCCINELLE</fullName>
            </value>
            <value>
                <fullName>COCCINELLE EXPRESS</fullName>
            </value>
            <value>
                <fullName>COLRUYT</fullName>
            </value>
            <value>
                <fullName>COOP</fullName>
            </value>
            <value>
                <fullName>CORA</fullName>
            </value>
            <value>
                <fullName>CORA DRIVE</fullName>
            </value>
            <value>
                <fullName>DIAGONAL</fullName>
            </value>
            <value>
                <fullName>ECO 1</fullName>
            </value>
            <value>
                <fullName>ECO 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>