force-app/main/default/objects/Account/fields/Banner_Group__c.field-meta.xml
<CustomField>
    <fullName>Banner_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banner Group</label>
    <referenceTo>Banner_Groups__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>