force-app/main/default/objects/Account/fields/Banner_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Banner_Sub_Group__c</fullName>
    <description>A group of accounts within a banner group.</description>
    <label>Banner Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>