force-app/main/default/objects/Account/fields/Bartenders__c.field-meta.xml
<CustomField>
    <fullName>Bartenders__c</fullName>
    <description>Mexico. Bartenders On Premise Accounts</description>
    <inlineHelpText>Number of Bartenders in the account</inlineHelpText>
    <label>Bartenders</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>