force-app/main/default/objects/Account/fields/Beer_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Beer_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the account has a license to sell beer</description>
    <label>Sells Beer</label>
    <type>Checkbox</type>
</CustomField>