force-app/main/default/objects/Account/fields/BF_Annual_Brand_Profit__c.field-meta.xml
<CustomField>
    <fullName>BF_Annual_Brand_Profit__c</fullName>
    <description>BF Annual Brand Profit</description>
    <label>B-F Annual Brand Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>