force-app/main/default/objects/Account/fields/BF_Annual_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>BF_Annual_Gross_Profit__c</fullName>
    <description>BF Annual Gross Profit - GTR</description>
    <label>B-F Annual Gross Profit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>