force-app/main/default/objects/Account/fields/BF_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>BF_Annual_Revenue__c</fullName>
    <description>Annual Revenue this account does for BF products.</description>
    <label>B-F Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>