force-app/main/default/objects/Account/fields/BF_Brand_Fit_whse__c.field-meta.xml
<CustomField>
    <fullName>BF_Brand_Fit_whse__c</fullName>
    <description>BF Brand Fit</description>
    <label>BF Brand Fit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>