force-app/main/default/objects/Account/fields/BF_Distribution__c.field-meta.xml
<CustomField>
    <fullName>BF_Distribution__c</fullName>
    <label>BF Distribution</label>
    <type>TextArea</type>
</CustomField>