force-app/main/default/objects/Account/fields/BF_Potential__c.field-meta.xml
<CustomField>
    <fullName>BF_Potential__c</fullName>
    <label>BF Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A	Over 80 k€ +</fullName>
            </value>
            <value>
                <fullName>B	40-80 k€</fullName>
            </value>
            <value>
                <fullName>C	20-40 k€</fullName>
            </value>
            <value>
                <fullName>D	12-20 k€</fullName>
            </value>
            <value>
                <fullName>E	8-12 k€</fullName>
            </value>
            <value>
                <fullName>F	5-8 k€</fullName>
            </value>
            <value>
                <fullName>G	&lt;5 k€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>