force-app/main/default/objects/Account/fields/BF_Sales__c.field-meta.xml
<CustomField>
    <fullName>BF_Sales__c</fullName>
    <label>BF Sales</label>
    <type>TextArea</type>
</CustomField>