force-app/main/default/objects/Account/fields/BF_Whiskey_Linear_Meters__c.field-meta.xml
<CustomField>
    <fullName>BF_Whiskey_Linear_Meters__c</fullName>
    <description>BF Whiskey Linear Meters - Feild Update from the Account Survey</description>
    <label>BF Whiskey Linear Meters</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>