force-app/main/default/objects/Account/fields/Bloomberg_Ticker__c.field-meta.xml
<CustomField>
    <fullName>Bloomberg_Ticker__c</fullName>
    <description>FDC-PLFC</description>
    <externalId>true</externalId>
    <inlineHelpText>Bloomberg-specific ticker used for daily data feeds</inlineHelpText>
    <label>Bloomberg Ticker</label>
    <length>20</length>
    <type>Text</type>
</CustomField>