force-app/main/default/objects/Account/fields/Board_Number_of_Directors__c.field-meta.xml
<CustomField>
    <fullName>Board_Number_of_Directors__c</fullName>
    <description>FDC-PLFC</description>
    <label>Board: Number of Directors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>