force-app/main/default/objects/Account/fields/BP_Retail_Account__c.field-meta.xml
<CustomField>
    <fullName>BP_Retail_Account__c</fullName>
    <description>Distributor&#39;s account number</description>
    <label>BP Retail Account #</label>
    <length>35</length>
    <type>Text</type>
</CustomField>