force-app/main/default/objects/Account/fields/Branch_Locations__c.field-meta.xml
<CustomField>
    <fullName>Branch_Locations__c</fullName>
    <label>Branch Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Anhui</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Chongqing</fullName>
            </value>
            <value>
                <fullName>Fujian</fullName>
            </value>
            <value>
                <fullName>Gansu</fullName>
            </value>
            <value>
                <fullName>Guangdong</fullName>
            </value>
            <value>
                <fullName>Guangxi</fullName>
            </value>
            <value>
                <fullName>Guizhou</fullName>
            </value>
            <value>
                <fullName>Hainan</fullName>
            </value>
            <value>
                <fullName>Hebei</fullName>
            </value>
            <value>
                <fullName>Heilongjiang</fullName>
            </value>
            <value>
                <fullName>Hene</fullName>
            </value>
            <value>
                <fullName>Hubei</fullName>
            </value>
            <value>
                <fullName>Hunan</fullName>
            </value>
            <value>
                <fullName>Jiangsu</fullName>
            </value>
            <value>
                <fullName>Jiangxi</fullName>
            </value>
            <value>
                <fullName>Jilin</fullName>
            </value>
            <value>
                <fullName>Liaoning</fullName>
            </value>
            <value>
                <fullName>Neimenggu</fullName>
            </value>
            <value>
                <fullName>Ningxia</fullName>
            </value>
            <value>
                <fullName>Qinghai</fullName>
            </value>
            <value>
                <fullName>Shaanxi</fullName>
            </value>
            <value>
                <fullName>Shandong</fullName>
            </value>
            <value>
                <fullName>Shanghai City</fullName>
            </value>
            <value>
                <fullName>Shanxi</fullName>
            </value>
            <value>
                <fullName>Sichuan</fullName>
            </value>
            <value>
                <fullName>Tianjin</fullName>
            </value>
            <value>
                <fullName>Xinjiang</fullName>
            </value>
            <value>
                <fullName>Yunnan</fullName>
            </value>
            <value>
                <fullName>Zhejiang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>