force-app/main/default/objects/Account/fields/Brand_Focus__c.field-meta.xml
<CustomField>
    <fullName>Brand_Focus__c</fullName>
    <description>The Field &quot;Brand Focus&quot; contains information to classify  On Trade outlets for sales and marketing purposes!</description>
    <label>Brand Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CH Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>EJ Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>SC Lime Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>JD Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>SC Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>FV Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>GJ Aktivierungsoutlet</fullName>
            </value>
            <value>
                <fullName>Absolute</fullName>
            </value>
            <value>
                <fullName>Bacardi Breezer</fullName>
            </value>
            <value>
                <fullName>Baileys</fullName>
            </value>
            <value>
                <fullName>Ballantine&#39;s Finest</fullName>
            </value>
            <value>
                <fullName>BEL ARBOR</fullName>
            </value>
            <value>
                <fullName>BOLLA</fullName>
            </value>
            <value>
                <fullName>Bombay</fullName>
            </value>
            <value>
                <fullName>BONTERRA</fullName>
            </value>
            <value>
                <fullName>Canadian Mist</fullName>
            </value>
            <value>
                <fullName>Chambord</fullName>
            </value>
            <value>
                <fullName>Chivas Regal</fullName>
            </value>
            <value>
                <fullName>Dewars</fullName>
            </value>
            <value>
                <fullName>Early Times</fullName>
            </value>
            <value>
                <fullName>Early Times Brown</fullName>
            </value>
            <value>
                <fullName>Early Times Yellow</fullName>
            </value>
            <value>
                <fullName>El Jimador</fullName>
            </value>
            <value>
                <fullName>ET KY Bluegrass</fullName>
            </value>
            <value>
                <fullName>Finlandia Vodka</fullName>
            </value>
            <value>
                <fullName>Gentleman Jack</fullName>
            </value>
            <value>
                <fullName>Glenfiddich</fullName>
            </value>
            <value>
                <fullName>Herradura</fullName>
            </value>
            <value>
                <fullName>Iichiko</fullName>
            </value>
            <value>
                <fullName>IW Harper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>