force-app/main/default/objects/Account/fields/Brand_Manager__c.field-meta.xml
<CustomField>
    <fullName>Brand_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_BrandManager</relationshipName>
    <type>Lookup</type>
</CustomField>