force-app/main/default/objects/Account/fields/Brands__c.field-meta.xml
<CustomField>
    <fullName>Brands__c</fullName>
    <description>FDC-GD</description>
    <label>Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5 Rivers</fullName>
            </value>
            <value>
                <fullName>Absolut</fullName>
            </value>
            <value>
                <fullName>Bacardi</fullName>
            </value>
            <value>
                <fullName>Ballantine&#39;s</fullName>
            </value>
            <value>
                <fullName>Belvedere</fullName>
            </value>
            <value>
                <fullName>Bols Likiery</fullName>
            </value>
            <value>
                <fullName>Bols Wódka</fullName>
            </value>
            <value>
                <fullName>Bonterra</fullName>
            </value>
            <value>
                <fullName>Bushmills</fullName>
            </value>
            <value>
                <fullName>Captain Morgan</fullName>
            </value>
            <value>
                <fullName>Chambord</fullName>
            </value>
            <value>
                <fullName>Chivas</fullName>
            </value>
            <value>
                <fullName>Ciroc</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>Cointreau</fullName>
            </value>
            <value>
                <fullName>Dom Perignon</fullName>
            </value>
            <value>
                <fullName>Don Eduardo</fullName>
            </value>
            <value>
                <fullName>El Jimador</fullName>
            </value>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>ETB</fullName>
            </value>
            <value>
                <fullName>ETP</fullName>
            </value>
            <value>
                <fullName>ETY</fullName>
            </value>
            <value>
                <fullName>F1870</fullName>
            </value>
            <value>
                <fullName>Fetzer</fullName>
            </value>
            <value>
                <fullName>FV</fullName>
            </value>
            <value>
                <fullName>GJ</fullName>
            </value>
            <value>
                <fullName>Glen</fullName>
            </value>
            <value>
                <fullName>Grant&#39;s</fullName>
            </value>
            <value>
                <fullName>Grey Goose</fullName>
            </value>
            <value>
                <fullName>Havana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>