force-app/main/default/objects/Account/fields/Brazil_Tax_Calc__c.field-meta.xml
<CustomField>
    <fullName>Brazil_Tax_Calc__c</fullName>
    <label>Brazil Tax Calc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0 - Not Taxable</fullName>
                <default>true</default>
                <label>0 - Not Taxable</label>
            </value>
            <value>
                <fullName>1 - Normal Taxes</fullName>
            </value>
            <value>
                <fullName>2 - Zona Franca - ICMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>