force-app/main/default/objects/Account/fields/BusinessPartner__c.field-meta.xml
<CustomField>
    <fullName>BusinessPartner__c</fullName>
    <description>BW Business Partner</description>
    <label>Business Partner ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>