force-app/main/default/objects/Account/fields/Buyer_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Conversion__c</fullName>
    <label>Buyer Conversion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>