force-app/main/default/objects/Account/fields/Buyer_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Rate__c</fullName>
    <label>Buyer Rate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>