force-app/main/default/objects/Account/fields/Call_Card_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Call_Card_Objectives__c</fullName>
    <label>Objectives</label>
    <type>TextArea</type>
</CustomField>